--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+
 .DS_Store
 node_modules/
 dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+.sass-cache/
 # Editor directories and files
 .idea
 *.suo
