--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-log/*
+.DS_Store
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .sass-cache/
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
