--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "webpack-dev-server": "^3.1.1",
     "randomatic": ">=3.0.0",
     "deep-extend": ">=0.5.1",
-    "atob": ">=2.1.0"
+    "atob": ">=2.1.0",
+    "url-parse": ">=1.4.3",
+    "macaddress": ">=0.2.9"
   }
 }
